--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
     "sass": "^1.64.2",
     "styled-components": "^6.0.5",
     "web-vitals": "^2.1.4"
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-prettier": "^5.0.0"
   }
